--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="dankMemes">
   <head>
     <meta charset="utf-8">
-    <title>Dank Memes</title>
+    <title>Memes</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
@@ -18,7 +18,7 @@
 <script src="js/services/cat.services.js"></script>
   </head>
   <body>
-    <header>dankMemes</header>
+    <header>Memes</header>
     <main data-ui-view></main>
     <footer>
       <p class="sig">Created by: SP, MF &amp; JG </h1>
