update name again

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="js/services/cat.services.js"></script>
   </head>
   <body>
-    <header>realMemes</header>
+    <header>real_Memes</header>
     <main data-ui-view></main>
     <footer>
       <p class="sig">Created by: SP, MF &amp; JG </h1>
